--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,21 +30,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^4.2.1
+
+  firebase_core: ^3.5.0
+  firebase_auth: ^5.1.4
+  cloud_firestore: ^5.0.2
+  firebase_storage: ^12.0.3
+  firebase_messaging: ^15.0.3
+  firebase_database: ^11.0.3
+
+  google_sign_in: ^6.2.1
+  flutter_facebook_auth: ^6.1.1
+  
+  cupertino_icons: ^1.0.8
 
   
   # Adicione os pacotes dos serviços que vai usar:
 
-firebase_auth: ^4.17.0
-cloud_firestore: ^4.15.0
-google_sign_in: ^6.2.1 # Necessário para Login com Google
-flutter_facebook_auth: ^6.1.1 # Necessário para Login com Facebook
-firebase_storage: ^11.6.0
-firebase_messaging: ^14.7.10
-firebase_database: ^10.4.0
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-cupertino_icons: ^1.0.8
+
 
 dev_dependencies:
   flutter_test:
